--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,9 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="zh">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="shortcut icon" href="{{ '/pychina.png'|asseturl }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{ '/static/style.css'|url }}" />
     <link rel="stylesheet" href="{{ '/static/custom.css'|url }}" />
@@ -9,6 +11,6 @@
   </head>
   <body class="bg-primary">
     {% include "components/nav.html" %}
-    <main class="mx-auto max-w-6xl p-4">{% block body %}{% endblock %}</main>
+    <main class="mx-auto max-w-6xl">{% block body %}{% endblock %}</main>
   </body>
 </html>
