--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
   </head>
   <body class="bg-primary">
     {% include "components/nav.html" %}
-    <main class="mx-auto max-w-6xl">{% block body %}{% endblock %}</main>
+    <main class="mx-auto max-w-6xl p-2">{% block body %}{% endblock %}</main>
+    {% include "components/footer.html" %}
   </body>
 </html>
