--- a/templates/page.html
+++ b/templates/page.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block title %}{{ this.title }}{% endblock %}
 {% block body %}
-  <h1 class="font-bold text-4xl my-4">{{this.title}}</h1>
-  <article class="prose lg:prose-lg shadow-xl border-2 border-black border-solid bg-white p-4 w-full max-w-none">
+  <h1 class="font-bold text-4xl my-6">{{this.title}}</h1>
+  <article class="prose lg:prose-lg shadow-xl border-2 border-black border-solid bg-white p-4 max-w-none">
     {{ this.body }}
   </article>
 {% endblock %}
