--- a/templates/city.html
+++ b/templates/city.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %} {% block title %}{{ this.title }}{% endblock %} {% block body %}
 <div class="text-center">
   <h1 class="font-bold text-4xl my-6 text-center">PyConChina 2022: {{this.title}}</h1>
-  <p class="text-xl mb-4">开始时间: {{this.start_date|default('待定')}}</p>
-  <p class="text-xl mb-4">地点: {{this.venue|default('待定')}}</p>
+  <p class="text-xl mb-4">开始时间: {% if this.start_date %}{{this.start_date.strftime('%Y-%m-%d %H:%M:%S')}}{% else %}待定{% endif %}</p>
+  <p class="mb-4">地点: {{this.venue|default('待定')}}</p>
   {% if this.activity %}
   <p><a href="{{this.activity}}">查看活动</a></p>
   {% endif %}
@@ -15,9 +15,14 @@
       <img class="w-40 h-40 rounded-full" src="{% if talk.avatar.startswith('/') %}{{talk.avatar|url}}{% else %}{{ (talk._id + '/' + talk.avatar)|url }}{% endif %}" alt="{{talk.speaker}}" />
     </div>
     <div>
-      <p class="mb-4">{{talk.bio}}</p>
-      <p>{{talk.start_date|default('时间待定')}}</p>
+      <p class="mb-4"><span class="font-bold mr-4 text-xl">{{talk.speaker}}</span>{{talk.bio}}</p>
       <p class="text-xl font-bold"><a href="{{talk._path|url}}">{{talk.title}}</a></p>
+      <div class="flex items-center">
+        <svg class="w-4 h-4 mr-2" viewBox="0 0 24 24">
+          <path fill="currentColor" d="M12 20c4.4 0 8-3.6 8-8s-3.6-8-8-8s-8 3.6-8 8s3.6 8 8 8m0-18c5.5 0 10 4.5 10 10s-4.5 10-10 10S2 17.5 2 12S6.5 2 12 2m5 9.5V13h-6V7h1.5v4.5H17Z" />
+        </svg>
+        <div>{% if talk.start_date %}{{talk.start_date.strftime('%H:%M')}}{% else %}时间待定{% endif %}</div>
+      </div>
     </div>
   </div>
   {% endfor %}
