--- a/templates/talk.html
+++ b/templates/talk.html
@@ -4,7 +4,7 @@
   <svg class="w-4 h-4 mr-2" viewBox="0 0 24 24">
     <path fill="currentColor" d="M12 20c4.4 0 8-3.6 8-8s-3.6-8-8-8s-8 3.6-8 8s3.6 8 8 8m0-18c5.5 0 10 4.5 10 10s-4.5 10-10 10S2 17.5 2 12S6.5 2 12 2m5 9.5V13h-6V7h1.5v4.5H17Z" />
   </svg>
-  {{ this.start_date|default('时间待定') }}
+  {% if this.start_date %}{{this.start_date.strftime('%Y-%m-%d %H:%M')}}{% else %}时间待定{% endif %}
 </h2>
 <article class="prose lg:prose-lg shadow-xl border-2 border-black border-solid bg-white p-4 max-w-none">
   <div class="flex items-center border-b border-gray-200">
