feat: update partners

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -24,7 +24,7 @@
       <p>
         <a href="https://pychina.org" target="_blank"><img class="w-full" src="{{ '/pychina-logo.jpeg'|url }}" alt="PyChina" /></a>
       </p>
-      <div class="flex items-center mb-2 space-x-1">
+      <div class="flex items-center justify-center mb-2 space-x-1">
         <a href="https://github.com/PyConChina/PyConChina2022" class="hover:text-primary transition duration-300 mr-1" target="_blank">
           <svg
             class="w-8 h-8"
@@ -58,8 +58,12 @@
             />
           </svg>
         </a>
+        <div class="text-sm text-center">
+          <p>合作及其他更多事宜请联系</p>
+          <p>CynthiaXin1</p>
+          <p>PyChina © 2022</p>
+        </div>
       </div>
-      <p>PyChina © 2022</p>
     </section>
   </div>
 </footer>
