--- a/templates/home.html
+++ b/templates/home.html
@@ -5,10 +5,4 @@
   <h1 class="font-bitmap text-4xl my-6">{{item.title}}</h1>
   <div class="prose max-w-none shadow-xl border-2 border-black border-solid bg-white p-4">{{item.body}}</div>
 </section>
-{% endfor %}
-
-<section>
-  <h1 class="font-bitmap text-4xl my-6">主办方</h1>
-  <div class="prose max-w-none shadow-xl border-2 border-black border-solid bg-white p-4">{{this.body}}</div>
-</section>
-{% endblock %}
+{% endfor %} {% endblock %}
