--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block title %}{{ this.title }}{% endblock %} {% block body %}
 <figure><img class="w-full" src="head.jpeg" alt="PyConChina 2022" /></figure>
-{% for item in this.children.filter(F._template == 'page.html') %}
+{% for item in this.children.filter(F._template == 'page.html').order_by('key') %}
 <section>
   <h1 class="font-bitmap text-4xl my-6">{{item.title}}</h1>
   <div class="prose max-w-none shadow-xl border-2 border-black border-solid bg-white p-4">{{item.body}}</div>
