--- a/templates/talk.html
+++ b/templates/talk.html
@@ -7,7 +7,7 @@
   {% if this.start_date %}{{this.start_date.strftime('%Y-%m-%d %H:%M')}}{% else %}时间待定{% endif %}
 </h2>
 <article class="prose lg:prose-lg shadow-xl border-2 border-black border-solid bg-white p-4 max-w-none">
-  <div class="flex items-center border-b border-gray-200">
+  <div class="lg:flex items-center border-b border-gray-200">
     <img class="w-40 h-40 rounded-full mr-6" src="{{ this.avatar|url }}" alt="{{this.speaker}}" />
     <div>
       <p class="text-base"><span class="font-bold mr-4 text-xl">{{this.speaker}}</span>{{this.bio}}</p>
