--- a/templates/page.html
+++ b/templates/page.html
@@ -1,8 +1,4 @@
-{% extends "layout.html" %}
-{% block title %}{{ this.title }}{% endblock %}
-{% block body %}
-  <h1 class="font-bold text-4xl my-6">{{this.title}}</h1>
-  <article class="prose lg:prose-lg shadow-xl border-2 border-black border-solid bg-white p-4 max-w-none">
-    {{ this.body }}
-  </article>
+{% extends "layout.html" %} {% block title %}{{ this.title }}{% endblock %} {% block body %}
+<h1 class="font-bold text-4xl my-6 flex items-center space-x-2"><img class="w-16" src="{{'arrow.png'|asseturl}}" /><span class="text-shadow">{{this.title}}</span></h1>
+<article class="prose lg:prose-lg shadow-xl border-2 border-black border-solid bg-white p-4 max-w-none">{{ this.body }}</article>
 {% endblock %}
